k8s/base/flower-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flower
  namespace: exam-app
spec:
  selector:
    app: flower
  ports:
  - port: 5555
    targetPort: 5555
  type: ClusterIP
