k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: exam-app
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
